   Add an interface pref for whether to hide additional widgets when
   double-clicking on document notebook tabs (off by default) - closes
   #2300430.
 * src/sciwrappers.c, src/sciwrappers.h, src/editor.c, doc/geany.txt,
   doc/geany.html:
   Make Shift+Mouse wheel scroll the editor view horizontally
   (#2410732).
   Add function sci_scroll_columns().


2008-12-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/c.c, tagmanager/get.h:
   Various improvements for parsing Vala files (mainly fix handling of
   function attributes, fix nested types handling, add some missing
   keywords, patch by Colomban Wendling, thanks).
 * data/ui_toolbar.xml:
   Remove the list of available actions and instead refer to the
   documentation for an up to date list.
 * THANKS, src/about.c, src/callbacks.c, src/callbacks.h, src/images.c,
   src/main.c, src/toolbar.c, src/ui_utils.c, src/ui_utils.h,
   doc/geany.txt, doc/geany.html:
   Add new toolbar elements: Close All and Preferences.
   The icon for Close All was kindly provided by Tyler Mulligan, thanks.
   Remove GeanyStockItem and add ui_new_pixbuf_from_stock() as a
   replacement.


2008-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, src/stash.h, src/keyfile.c, src/keyfile.h, src/main.c:
   Move Stash data types to stash.c, so Stash functions could be used
   by plugins without breaking the ABI when appending fields. Also the
   user code is neater and has type checking.
 * src/interface.c, geany.glade:
   Don't expand Prefs dialog Editor->Completions tab frames.


2008-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Little reformatting.
   Beautify the Waf output when generating geanyfunctions.h.
 * src/geany.c, src/ui_utils.c, src/ui_utils.h, src/images.c:
   Move stock image name macro and image enum to ui_utils.h.
   Remove old, unused images.


2008-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c: